css: Fix scrollbar overlapping delete button in todo and poll modal.
Fixes: #32950

--- a/web/styles/modal.css
+++ b/web/styles/modal.css
@@ -514,6 +514,10 @@
             height: 0;
             overflow: auto;
             flex-grow: 1;
+            /* Moves scrollbar out without affecting content */
+            margin-right: -15px;
+            /* Keeps space for scrollbar */
+            padding-right: 15px;
 
             .option-row {
                 list-style-type: none;
